cambios en la nueva cuenta

--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -55,7 +55,11 @@
                 <p:commandButton value="Ingresar"  actionListener="#{beanLogin.autenticar()}"/>
                 <p:commandButton value="Cancelar"  action="Login.xhtml" style="margin-left: 20px" />
             </div>
-            
+            <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
+                <footer style="height: 50px; background-color: #102b70">
+                    <h3 style="text-align: center;color: white; position: relative; top: 15px;">Proyecto Programacion V</h3>
+                </footer>
+            </div>
         </h:form>
         
     </h:body>
