--- a/web/Principal.xhtml
+++ b/web/Principal.xhtml
@@ -86,7 +86,7 @@
                     <p:commandButton value="Cerrar Sesion" actionListener="#{beanPrincipal.cerrarSession()}" ajax="true" />  
                 </div>
             </p:dialog>
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />   
+            <p:growl sticky="true"  autoUpdate="true" id="messages" showDetail="true" />   
             <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
                 <footer style="height: 50px; background-color: #102b70">
                     <h3 style="text-align: center;color: white; position: relative; top: 15px;">Proyecto Programacion V</h3>
