--- a/web/AceptacionSolictudes.xhtml
+++ b/web/AceptacionSolictudes.xhtml
@@ -174,7 +174,7 @@
                     <p:commandButton value="Cerrar Sesion" actionListener="#{beanSolicitudes.cerrarSession()}" ajax="true" />  
                 </div>
             </p:dialog>
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />
         </h:form>
         <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
             <footer style="height: 50px; background-color: #102b70">
