--- a/web/ActualizacionContrasena.xhtml
+++ b/web/ActualizacionContrasena.xhtml
@@ -78,7 +78,7 @@
                 </div>
             </p:dialog>
             
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" sticky="true" />
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />
             
         </h:form>
         <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
