--- a/web/MantenimientoRecurso.xhtml
+++ b/web/MantenimientoRecurso.xhtml
@@ -44,13 +44,12 @@
                     </p:submenu>
                     <p:submenu label="Reportes" rendered="#{beanMantenimientRecurso.mostarMenuReportes}">
                         <p:menuitem value="Reportes de prestamos"  />
-                        <p:menuitem value="Reportes de usuarios" />
-                        <p:menuitem value="Reportes de infraestructuras"  />
-                        <p:menuitem value="Reportes de cursos"  />
+                       
 
                     </p:submenu>
                     <p:submenu label="Prestamos" rendered="#{beanMantenimientRecurso.mostrarMenuPrestamos}">
                         <p:menuitem value="Solicitud de Prestamos"  url="Reservacion.xhtml"/>
+                        <p:menuitem value="Solicitudes de Cuenta de Usuario"  url="AceptacionSolictudes.xhtml"/>
 
                     </p:submenu>
                 </p:panelMenu>
@@ -104,7 +103,7 @@
 
                 </p:outputPanel>
                 <div> 
-                    <p:commandButton value="Ayuda"  update=":form:recursoDetalles" action="#{beanMantenimientRecurso.ocultar()}" oncomplete="PF('recursoDialog').show()"  ajax="true"/>
+                    <p:commandButton disabled="true" value="Ayuda"  update=":form:recursoDetalles" action="#{beanMantenimientRecurso.ocultar()}" oncomplete="PF('recursoDialog').show()"  ajax="true"/>
                     <p:commandButton value="Nuevo"  update=":form:recursoDetalles"  action="#{beanMantenimientRecurso.limpiaCampos()}" oncomplete="PF('recursoDialog').show()"  ajax="true" />  
                     <p:commandButton value="Modificar" update=":form:recursoDetalles" action="#{beanMantenimientRecurso.ocultar()}" actionListener="#{beanMantenimientRecurso.actualizar()}" oncomplete="@all"  ajax="true" />
                     <p:commandButton value="Eliminar" update=":form:recursoDetalles" action="#{beanMantenimientRecurso.ocultar()}" actionListener="#{beanMantenimientRecurso.eliminar()}" oncomplete="@all"  ajax="true" />
@@ -134,7 +133,7 @@
                 </div>
             </p:dialog>
 
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />   
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" /> 
             <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
                 <footer style="height: 50px; background-color: #102b70">
                     <h3 style="text-align: center;color: white; position: relative; top: 15px;">Proyecto Programacion V</h3>
