--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -53,7 +53,7 @@
                 <p:commandButton value="Ingresar"  actionListener="#{beanLogin.autenticar()}"/>
                 <p:commandButton value="Cancelar"  action="Login.xhtml" style="margin-left: 20px" />
             </div>
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" sticky="true" />  
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />  
         </h:form>
         <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
             <footer style="height: 50px; background-color: #102b70">
