--- a/web/MantenimientoCursoDeas.xhtml
+++ b/web/MantenimientoCursoDeas.xhtml
@@ -31,7 +31,7 @@
 
         <h:form id="form" class="iu-g"> 
 
-            <p:growl id="growl" showDetail="true" sticky="true" />  
+             
 
             <div class="ui-g-3">
                 <p:panelMenu >
@@ -48,14 +48,11 @@
                     </p:submenu>
                     <p:submenu label="Reportes" rendered="#{beanMantenimientoCursoDeas.mostarMenuReportes}">
                         <p:menuitem value="Reportes de prestamos"  />
-                        <p:menuitem value="Reportes de usuarios" />
-                        <p:menuitem value="Reportes de infraestructuras"  />
-                        <p:menuitem value="Reportes de cursos"  />
-
+                        
                     </p:submenu>
                     <p:submenu label="Prestamos" rendered="#{beanMantenimientoCursoDeas.mostrarMenuPrestamos}">
                         <p:menuitem value="Solicitud de Prestamos"  url="Reservacion.xhtml"/>
-
+                        <p:menuitem value="Solicitudes de Cuenta de Usuario"  url="AceptacionSolictudes.xhtml"/>
                     </p:submenu>
                 </p:panelMenu>
             </div>
@@ -113,7 +110,7 @@
 
                 </p:outputPanel>
                 <div> 
-                    <p:commandButton value="Ayuda"  update=":form:cursoDetalles" action="#{beanMantenimientoCursoDeas.ocultar()}" oncomplete="PF('cursoDialog').show()"  ajax="true"/>
+                    <p:commandButton disabled="true" value="Ayuda"  update=":form:cursoDetalles" action="#{beanMantenimientoCursoDeas.ocultar()}" oncomplete="PF('cursoDialog').show()"  ajax="true"/>
                     <p:commandButton value="Nuevo"  update=":form:cursoDetalles"  action="#{beanMantenimientoCursoDeas.limpiaCampos()}" oncomplete="PF('cursoDialog').show()"  ajax="true" />  
                     <p:commandButton value="Modificar" update=":form:cursoDetalles" action="#{beanMantenimientoCursoDeas.ocultar()}" actionListener="#{beanMantenimientoCursoDeas.actualizar()}" oncomplete="@all"  ajax="true" />
                     <p:commandButton value="Eliminar" update=":form:cursoDetalles" action="#{beanMantenimientoCursoDeas.ocultar()}" actionListener="#{beanMantenimientoCursoDeas.eliminar()}" oncomplete="@all"  ajax="true" />
@@ -142,7 +139,7 @@
                     <p:commandButton value="Cerrar Sesion" actionListener="#{beanMantenimientoCursoDeas.cerrarSession()}" ajax="true" />  
                 </div>
             </p:dialog>
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />   
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />
             <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
                 <footer style="height: 50px; background-color: #102b70">
                     <h3 style="text-align: center;color: white; position: relative; top: 15px;">Proyecto Programacion V</h3>
