--- a/web/MantenimientoProgramas.xhtml
+++ b/web/MantenimientoProgramas.xhtml
@@ -29,7 +29,7 @@
         </header>
         <h:form id="form" class="iu-g"> 
 
-            <p:growl id="growl" showDetail="true" sticky="true" />  
+            
 
             <div class="ui-g-3">
                 <p:panelMenu >
@@ -46,13 +46,12 @@
                     </p:submenu>
                     <p:submenu label="Reportes" rendered="#{beanMantenimientoProgramas.mostarMenuReportes}">
                         <p:menuitem value="Reportes de prestamos"  />
-                        <p:menuitem value="Reportes de usuarios" />
-                        <p:menuitem value="Reportes de infraestructuras"  />
-                        <p:menuitem value="Reportes de cursos"  />
+                        
 
                     </p:submenu>
                     <p:submenu label="Prestamos" rendered="#{beanMantenimientoProgramas.mostrarMenuPrestamos}">
                         <p:menuitem value="Solicitud de Prestamos"  url="Reservacion.xhtml"/>
+                        <p:menuitem value="Solicitudes de Cuenta de Usuario"  url="AceptacionSolictudes.xhtml"/>
 
                     </p:submenu>
                 </p:panelMenu>
@@ -104,7 +103,7 @@
 
                 </p:outputPanel>
                 <div> 
-                    <p:commandButton value="Ayuda"  update=":form:programaDetalles"  action="#{beanMantenimientoProgramas.ocultar()}" oncomplete="PF('programaDialog').show()"  ajax="true"/>
+                    <p:commandButton disabled="true" value="Ayuda"  update=":form:programaDetalles"  action="#{beanMantenimientoProgramas.ocultar()}" oncomplete="PF('programaDialog').show()"  ajax="true"/>
                     <p:commandButton value="Nuevo"  update=":form:programaDetalles"  action="#{beanMantenimientoProgramas.limpiaCampos()}" oncomplete="PF('programaDialog').show()"  ajax="true" />  
                     <p:commandButton value="Modificar" update=":form:programaDetalles" action="#{beanMantenimientoProgramas.ocultar()}" actionListener="#{beanMantenimientoProgramas.actualizar()}" oncomplete="@all"  ajax="true" />
                     <p:commandButton value="Eliminar" update=":form:programaDetalles" action="#{beanMantenimientoProgramas.ocultar()}" actionListener="#{beanMantenimientoProgramas.eliminar()}" oncomplete="@all"  ajax="true" />
@@ -134,7 +133,7 @@
                 </div>
             </p:dialog>
 
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" /> 
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />
 
         </h:form>
         <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0; position: fixed">
