--- a/web/NuevaCuenta.xhtml
+++ b/web/NuevaCuenta.xhtml
@@ -102,7 +102,7 @@
                 <p:commandButton value="Cancelar"  action="Login.xhtml" style="margin-right:20px;"  />
             </div>
             
-            <p:growl  autoUpdate="true" id="messages" showDetail="true" />
+            <p:growl sticky="true" autoUpdate="true" id="messages" showDetail="true" />
         </h:form>
         <div class="ui-g-12" style="padding: 0; bottom: 0;margin-bottom: 0;" >
             <footer style="height: 50px; background-color: #102b70">
